removed unnecessary checks from auth